# T1_Hypervisor

./: .gitignore  Cargo.toml  README.md  debug_log.md  virt.dtb  virt_machine_specs.txt
.cargo/: config.toml
payload/: Cargo.toml  build.sh  linker.ld  payload.s
payload/.cargo/: config.toml
payload/src/: main.rs
src/: boot.s  cpu.rs  exception.rs  exception.s  linker.ld  main.rs  uart.rs
src/cpu/: freq.rs  psci.rs  secondary.rs  topology.rs
src/irq/: gic.rs  mod.rs
src/memory/: cache_color.rs  mod.rs  pmm.rs  stage1.rs
src/time/: mod.rs
src/vm/: ipc.rs  killswitch.rs  loader.rs  mod.rs  ram.rs  stage2.rs  watchdog.rs
